--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,12 @@
 services:
   - type: web
     name: smartcafe
-    runtime: python
+    env: python
+    region: oregon
+    plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: python app.py
+    pythonVersion: 3.11
     envVars:
       - key: PORT
         value: 5000
-    pythonVersion: 3.11
