--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: python app.py
-    pythonVersion: 3.11
+    pythonVersion: "3.11"
     envVars:
       - key: PORT
         value: 5000
